restructured index.html to look more like our wireframe, set up menu, added a placeholder for the motion chart and started working on tiles for the other charts but those aren't finished yet. I have a custom element I built for templates that may work.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,3 +12,16 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
+
+.main-menu a {
+  color: #fff;
+}
+.main-menu a:hover {
+  color: #ED13C9;
+}
+
+.test-card {
+  box-sizing: border-box;
+  width: 50%;
+  flex-wrap: wrap;
+}
