replaced image placeholders with google-chart element placeholders. May want to use google-chart element for static charts just to make it easy

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -20,8 +20,6 @@ body {
   color: #ED13C9;
 }
 
-/*.test-card {
-  box-sizing: border-box;
-  width: 50%;
-  flex-wrap: wrap;
-}*/
+#motionChartPlaceholder {
+  height: 500px;
+}
