adjusted some styling and tested out some external data with a <google-chart>

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -20,6 +20,10 @@ body {
   color: #ED13C9;
 }
 
+.content {
+    background-image: url(images/seamless_cotton.png) repeat;
+  }
+
 #motionChartPlaceholder {
   height: 500px;
 }
